Fix various non-unified build issues introduced since r254327 https://bugs.webkit.org/show_bug.cgi?id=206356

Reviewed by Chris Dumez.

Source/WebCore:

No new tests needed.

* html/LinkRelAttribute.h: Add missing inclusion of wtf/Markable.h

Source/WebKit:

* WebProcess/WebCoreSupport/gtk/WebContextMenuClientGtk.cpp:
(WebKit::WebContextMenuClient::insertEmoji): Add missing namespace to WebCore::Frame parameter.


Canonical link: https://commits.webkit.org/219497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254751 268f45cc-cd09-0410-ab3c-d52691b4dbfc